--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -2,7 +2,7 @@
   font-size: 0.8em;
 }
 
-.mediumResponsiveFont, .redButton, .primaryControls .inputAndDisplay form div input, .primaryControls .inputAndDisplay form div button, .primaryControls .inputAndDisplay form div .errorMessage, .taskInput form input, .taskInput form button, .taskInput form .errorMessage, .modalBackground .modalContainer .modalMessage, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
+.mediumResponsiveFont, .redButton, .primaryControls .inputAndDisplay form div input, .primaryControls .inputAndDisplay form div button, .primaryControls .inputAndDisplay form div .errorMessage, .taskControls .taskInput form input, .taskControls .taskInput form button, .taskControls .taskInput form .errorMessage, .modalBackground .modalContainer .modalMessage, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
   font-size: 0.9em;
 }
 
@@ -11,10 +11,10 @@
 }
 
 .XLargeResponsiveFont, .dollarValue {
-  font-size: 1.7em;
+  font-size: 1.9em;
 }
 
-.buttonBaseStyle, .redButton, .primaryControls .inputAndDisplay form div button, .taskInput form button, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
+.buttonBaseStyle, .redButton, .primaryControls .inputAndDisplay form div button, .taskControls .taskInput form button, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
   outline: none;
   border-style: none;
   -webkit-box-sizing: border-box;
@@ -26,7 +26,7 @@
   visibility: hidden;
 }
 
-.paddingOne, .container .completedTaskList .completedTaskEntry .taskName, .container .completedTaskList .completedTaskEntry .totalTaskValue, .primaryControls .primaryTimer .valueBreakdown, .dollarValue, .taskDetails .taskName {
+.paddingOne, .container .completedTaskList .completedTaskEntry .taskName, .container .completedTaskList .completedTaskEntry .totalTaskValue, .primaryControls .primaryTimer .valueBreakdown, .dollarValue, .taskControls .taskDetails .taskName {
   padding-top: 18px;
   padding-right: 20px;
   padding-bottom: 12px;
@@ -40,7 +40,7 @@
   padding-left: 20px;
 }
 
-.inputPadding, .primaryControls .inputAndDisplay, .taskInput {
+.inputPadding, .primaryControls .inputAndDisplay, .taskControls .taskInput {
   padding: 10px;
 }
 
@@ -82,8 +82,8 @@ input[type='text'] {
 }
 
 .deleteTaskAnimation {
-  -webkit-animation: slideOutRight 250ms forwards ease-out;
-          animation: slideOutRight 250ms forwards ease-out;
+  -webkit-animation: deleteTask 250ms forwards ease-out;
+          animation: deleteTask 250ms forwards ease-out;
 }
 
 .completeTaskAnimation {
@@ -405,7 +405,13 @@ input[type='text'] {
           justify-content: space-between;
 }
 
-.taskInput {
+.taskControls {
+  width: 100%;
+  -webkit-animation: slideInLeft 250ms forwards ease-in-out;
+          animation: slideInLeft 250ms forwards ease-in-out;
+}
+
+.taskControls .taskInput {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -424,7 +430,7 @@ input[type='text'] {
   border-radius: 10px 10px 0 0;
 }
 
-.taskInput form {
+.taskControls .taskInput form {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -433,7 +439,7 @@ input[type='text'] {
   position: relative;
 }
 
-.taskInput form .inputGuard {
+.taskControls .taskInput form .inputGuard {
   top: 0;
   left: 0;
   right: 0;
@@ -442,7 +448,7 @@ input[type='text'] {
   border-radius: 10px;
 }
 
-.taskInput form .showWarning {
+.taskControls .taskInput form .showWarning {
   top: 0;
   left: 0;
   right: 0;
@@ -463,7 +469,7 @@ input[type='text'] {
   background-color: #fdfdfd;
 }
 
-.taskInput form input {
+.taskControls .taskInput form input {
   width: 70%;
   height: 100%;
   outline: none;
@@ -478,14 +484,14 @@ input[type='text'] {
   background-color: #f9f9f9;
 }
 
-.taskInput form input:focus {
+.taskControls .taskInput form input:focus {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: white;
   border: 2px solid #d7d7d7;
 }
 
-.taskInput form button {
+.taskControls .taskInput form button {
   width: 30%;
   height: 100%;
   color: #323232;
@@ -495,7 +501,7 @@ input[type='text'] {
   border: 2px solid #d7d7d7;
 }
 
-.taskInput form .errorMessage {
+.taskControls .taskInput form .errorMessage {
   top: 0;
   left: 0;
   right: 0;
@@ -514,7 +520,7 @@ input[type='text'] {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, white 50%);
 }
 
-.taskDetails {
+.taskControls .taskDetails {
   width: 100%;
   color: #323232;
   display: -webkit-box;
@@ -530,7 +536,7 @@ input[type='text'] {
           flex-direction: column;
 }
 
-.taskDetails .taskName {
+.taskControls .taskDetails .taskName {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -643,7 +649,7 @@ input[type='text'] {
   .responsiveFont, .dollarSign:before, .container .completedTaskList .completedTaskEntry, .primaryControls .primaryTimer .valueBreakdown, .timerDisplay .timer {
     font-size: 0.9em;
   }
-  .mediumResponsiveFont, .redButton, .primaryControls .inputAndDisplay form div input, .primaryControls .inputAndDisplay form div button, .primaryControls .inputAndDisplay form div .errorMessage, .taskInput form input, .taskInput form button, .taskInput form .errorMessage, .modalBackground .modalContainer .modalMessage, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
+  .mediumResponsiveFont, .redButton, .primaryControls .inputAndDisplay form div input, .primaryControls .inputAndDisplay form div button, .primaryControls .inputAndDisplay form div .errorMessage, .taskControls .taskInput form input, .taskControls .taskInput form button, .taskControls .taskInput form .errorMessage, .modalBackground .modalContainer .modalMessage, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
     font-size: 1em;
   }
   .dollarSign:before {
@@ -653,7 +659,7 @@ input[type='text'] {
 }
 
 @media (min-width: 425px) {
-  .paddingOne, .container .completedTaskList .completedTaskEntry .taskName, .container .completedTaskList .completedTaskEntry .totalTaskValue, .primaryControls .primaryTimer .valueBreakdown, .dollarValue, .taskDetails .taskName {
+  .paddingOne, .container .completedTaskList .completedTaskEntry .taskName, .container .completedTaskList .completedTaskEntry .totalTaskValue, .primaryControls .primaryTimer .valueBreakdown, .dollarValue, .taskControls .taskDetails .taskName {
     padding-top: 18px;
     padding-right: 30px;
     padding-bottom: 12px;
@@ -665,14 +671,14 @@ input[type='text'] {
     padding-bottom: 10px;
     padding-left: 30px;
   }
-  .mediumResponsiveFont, .redButton, .primaryControls .inputAndDisplay form div input, .primaryControls .inputAndDisplay form div button, .primaryControls .inputAndDisplay form div .errorMessage, .taskInput form input, .taskInput form button, .taskInput form .errorMessage, .modalBackground .modalContainer .modalMessage, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
+  .mediumResponsiveFont, .redButton, .primaryControls .inputAndDisplay form div input, .primaryControls .inputAndDisplay form div button, .primaryControls .inputAndDisplay form div .errorMessage, .taskControls .taskInput form input, .taskControls .taskInput form button, .taskControls .taskInput form .errorMessage, .modalBackground .modalContainer .modalMessage, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
     font-size: 1.1em;
   }
   .largeResponsiveFont {
     font-size: 1.8em;
   }
   .XLargeResponsiveFont, .dollarValue {
-    font-size: 1.9em;
+    font-size: 2.1em;
   }
   .dollarSign:before {
     top: 1.2px;
@@ -681,7 +687,7 @@ input[type='text'] {
 }
 
 @media (min-width: 600px) {
-  .paddingOne, .container .completedTaskList .completedTaskEntry .taskName, .container .completedTaskList .completedTaskEntry .totalTaskValue, .primaryControls .primaryTimer .valueBreakdown, .dollarValue, .taskDetails .taskName {
+  .paddingOne, .container .completedTaskList .completedTaskEntry .taskName, .container .completedTaskList .completedTaskEntry .totalTaskValue, .primaryControls .primaryTimer .valueBreakdown, .dollarValue, .taskControls .taskDetails .taskName {
     padding-top: 18px;
     padding-right: 40px;
     padding-bottom: 12px;
@@ -693,8 +699,42 @@ input[type='text'] {
     padding-bottom: 10px;
     padding-left: 40px;
   }
-  .inputPadding, .primaryControls .inputAndDisplay, .taskInput {
+  .inputPadding, .primaryControls .inputAndDisplay, .taskControls .taskInput {
     padding: 20px;
+  }
+}
+
+@-webkit-keyframes slideInDown {
+  0% {
+    opacity: 0.1;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+}
+
+@keyframes slideInDown {
+  0% {
+    opacity: 0.1;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    -webkit-transform-origin: top;
+            transform-origin: top;
   }
 }
 
@@ -720,7 +760,7 @@ input[type='text'] {
   }
 }
 
-@-webkit-keyframes slideOutRight {
+@-webkit-keyframes deleteTask {
   0% {
     opacity: 1;
     -webkit-transform: translateX(0);
@@ -733,7 +773,7 @@ input[type='text'] {
   }
 }
 
-@keyframes slideOutRight {
+@keyframes deleteTask {
   0% {
     opacity: 1;
     -webkit-transform: translateX(0);
