--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -75,6 +75,13 @@ input[type='text'] {
           appearance: none;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+          box-shadow: 0 0 0px 1000px #000 inset;
+}
+
 .redButton {
   padding: 0;
   color: #ff1400;
