--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -75,6 +75,12 @@ input[type='text'] {
   appearance: none;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  box-shadow: 0 0 0px 1000px #000 inset;
+}
+
 .redButton {
   padding: 0;
   color: $warning;
