--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -78,8 +78,8 @@ input[type='text'] {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
-  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
-          box-shadow: 0 0 0px 1000px #000 inset;
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
+          box-shadow: 0 0 0px 1000px white inset;
 }
 
 .redButton {
