--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -78,7 +78,7 @@ input[type='text'] {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
-  box-shadow: 0 0 0px 1000px #000 inset;
+  box-shadow: 0 0 0px 1000px white inset;
 }
 
 .redButton {
