--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -1,4 +1,4 @@
-.responsiveFont, .dollarSign:before, .container .completedTaskList .completedTaskEntry, .primaryControls .primaryTimer .valueBreakdown, .timerDisplay .timer {
+.responsiveFont, .dollarSign:before, .helpMessage, .container .completedTaskList .completedTaskEntry, .primaryControls .primaryTimer .valueBreakdown, .timerDisplay .timer {
   font-size: 0.8em;
 }
 
@@ -33,7 +33,7 @@
   padding-left: 20px;
 }
 
-.paddingTwo, .container .completedTaskList .completedTaskEntry .taskDetails, .timerDisplay {
+.paddingTwo, h2, .helpMessage, .container .completedTaskList .completedTaskEntry .taskDetails, .timerDisplay {
   padding-top: 10px;
   padding-right: 20px;
   padding-bottom: 10px;
@@ -104,6 +104,23 @@ input:-webkit-autofill:focus {
           animation: slideInLeft 250ms forwards cubic-bezier(0.55, 0.5, 0.97, 0.76);
 }
 
+h2 {
+  margin: 0;
+  color: #fdfdfd;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.helpMessage {
+  width: 100%;
+  color: #d7d7d7;
+  border-radius: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #2d2d2d;
+  margin: 0 auto 10px auto;
+}
+
 .container {
   padding: 10px;
   display: -webkit-box;
@@ -126,18 +143,11 @@ input:-webkit-autofill:focus {
           flex-direction: column;
 }
 
-.container h2 {
-  color: #fdfdfd;
-  text-align: center;
-  margin: 0 auto 10px auto;
-}
-
 .container .completedTaskList {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 5px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -145,7 +155,7 @@ input:-webkit-autofill:focus {
 }
 
 .container .completedTaskList .completedTaskEntry {
-  color: #323232;
+  color: #2d2d2d;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -161,7 +171,7 @@ input:-webkit-autofill:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #5f5f5f;
+  color: #323232;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -179,25 +189,25 @@ input:-webkit-autofill:focus {
 }
 
 .container .completedTaskList .completedTaskEntry .taskName span {
-  color: #323232;
+  color: #2d2d2d;
   padding-left: 10px;
 }
 
 .container .completedTaskList .completedTaskEntry .taskDetails {
   margin: 0;
-  color: #323232;
+  color: #2d2d2d;
   background-color: #fdfdfd;
 }
 
 .container .completedTaskList .completedTaskEntry .taskDetails span {
-  color: #5f5f5f;
+  color: #323232;
 }
 
 .container .completedTaskList .completedTaskEntry .totalTaskValue {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #5f5f5f;
+  color: #323232;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -210,7 +220,7 @@ input:-webkit-autofill:focus {
 }
 
 .container .completedTaskList .completedTaskEntry .totalTaskValue span {
-  color: #323232;
+  color: #2d2d2d;
   font-size: 1.2em;
   padding-left: 10px;
 }
@@ -296,7 +306,7 @@ input:-webkit-autofill:focus {
   width: 70%;
   height: 100%;
   outline: none;
-  color: #323232;
+  color: #2d2d2d;
   padding: 20px 18px;
   border-style: none;
   -webkit-box-sizing: border-box;
@@ -317,7 +327,7 @@ input:-webkit-autofill:focus {
 .primaryControls .inputAndDisplay form div button {
   width: 30%;
   height: 100%;
-  color: #323232;
+  color: #2d2d2d;
   padding: 20px;
   background-color: #d7d7d7;
   border-radius: 0 10px 0 0;
@@ -345,7 +355,7 @@ input:-webkit-autofill:focus {
 
 .primaryControls .primaryTimer {
   width: 100%;
-  color: #323232;
+  color: #2d2d2d;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -364,7 +374,7 @@ input:-webkit-autofill:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #5f5f5f;
+  color: #323232;
   text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -400,7 +410,7 @@ input:-webkit-autofill:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #5f5f5f;
+  color: #323232;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -486,7 +496,7 @@ input:-webkit-autofill:focus {
   width: 70%;
   height: 100%;
   outline: none;
-  color: #323232;
+  color: #2d2d2d;
   padding: 20px 18px;
   border-style: none;
   -webkit-box-sizing: border-box;
@@ -507,7 +517,7 @@ input:-webkit-autofill:focus {
 .taskControls .taskInput form button {
   width: 30%;
   height: 100%;
-  color: #323232;
+  color: #2d2d2d;
   padding: 20px;
   background-color: #d7d7d7;
   border-radius: 0 10px 0 0;
@@ -535,12 +545,12 @@ input:-webkit-autofill:focus {
 
 .taskControls .taskDetails {
   width: 100%;
-  color: #323232;
+  color: #2d2d2d;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-box-orient: vertical;
@@ -555,7 +565,7 @@ input:-webkit-autofill:focus {
   display: -ms-flexbox;
   display: flex;
   font-size: 1em;
-  color: #5f5f5f;
+  color: #323232;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -659,7 +669,7 @@ input:-webkit-autofill:focus {
 }
 
 @media (min-width: 360px) {
-  .responsiveFont, .dollarSign:before, .container .completedTaskList .completedTaskEntry, .primaryControls .primaryTimer .valueBreakdown, .timerDisplay .timer {
+  .responsiveFont, .dollarSign:before, .helpMessage, .container .completedTaskList .completedTaskEntry, .primaryControls .primaryTimer .valueBreakdown, .timerDisplay .timer {
     font-size: 0.9em;
   }
   .mediumResponsiveFont, .redButton, .blueButton, .primaryControls .inputAndDisplay form div input, .primaryControls .inputAndDisplay form div button, .primaryControls .inputAndDisplay form div .errorMessage, .taskControls .taskInput form input, .taskControls .taskInput form button, .taskControls .taskInput form .errorMessage, .modalBackground .modalContainer .modalMessage, .modalBackground .modalContainer .modalButtonContainer .modalCancel, .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
@@ -678,7 +688,7 @@ input:-webkit-autofill:focus {
     padding-bottom: 12px;
     padding-left: 30px;
   }
-  .paddingTwo, .container .completedTaskList .completedTaskEntry .taskDetails, .timerDisplay {
+  .paddingTwo, h2, .helpMessage, .container .completedTaskList .completedTaskEntry .taskDetails, .timerDisplay {
     padding-top: 10px;
     padding-right: 30px;
     padding-bottom: 10px;
@@ -706,7 +716,7 @@ input:-webkit-autofill:focus {
     padding-bottom: 12px;
     padding-left: 40px;
   }
-  .paddingTwo, .container .completedTaskList .completedTaskEntry .taskDetails, .timerDisplay {
+  .paddingTwo, h2, .helpMessage, .container .completedTaskList .completedTaskEntry .taskDetails, .timerDisplay {
     padding-top: 10px;
     padding-right: 40px;
     padding-bottom: 10px;
